# LibShader

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CmakeLists.txt  README.md  vcpkg.json
Includes/: LibShader.h
Includes/libshader/: Compiler.h
src/: AST.h  Complier.cpp  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h
src/exe/: main.cpp  testmain.cpp
tests/: test.glm
